modified:   _config.yml         new file:   _data/about.yml         modified:   _data/general.yml         new file:   _data/intro_text.yml         new file:   _data/navigation.yml         new file:   _data/sub_navigation.yml         new file:   _includes/about_contact.html         modified:   _includes/head.html         new file:   _includes/navigation.html         modified:   _layouts/default.html         new file:   _sass/about_contact.scss         modified:   _sass/index.scss         new file:   _sass/typography.scss         new file:   _sass/variables.scss         modified:   assets/css/style.scss         new file:   assets/fonts/Switzer-Variable.ttf         new file:   assets/fonts/Switzer-Variable.woff         new file:   assets/fonts/Switzer-Variable.woff2         new file:   assets/fonts/Switzer-VariableItalic.ttf         new file:   assets/fonts/Switzer-VariableItalic.woff         new file:   assets/fonts/Switzer-VariableItalic.woff2         modified:   assets/js/script.js         new file:   images/uploads/.DS_Store         new file:   images/uploads/intro-portrait.webp         new file:   images/uploads/intro.webp         modified:   index.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,5 @@
 {% include head.html %}
+  {% include navigation.html %}
+  {% include about_contact.html %}
   {{ content }}
 {% include foot.html %}
