--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -1,3 +1,80 @@
-h1 {
-  font-size: 200px;
+#section-1 
+{
+  left: 0px;
+  top: 0px;
+  width: 100vw;
+  height: calc(100vh - var(--navbar-height));
+  position: relative;
+  display: flex;
+}
+
+#section-1 #section-1-left, #section-1 #section-1-right 
+{
+  width: 50%;
+  height: 100%;
+  position: relative;
+  background-color: rgb(220, 220, 220);
+}
+
+#section-1 #section-1-right .mobile-text 
+{
+  z-index: 0;
+  color: white;
+  position: absolute;
+  top: 0;
+}
+
+#section-1 #section-1-left .text,
+#section-1 #section-1-right .mobile-text 
+{
+  padding: var(--main-space);
+}
+
+#section-1 #section-1-right .image 
+{
+  background-image: url("/images/uploads/intro-portrait.webp");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
+.category-head 
+{
+  background-color: black; 
+  //position: sticky;
+  //top: 0;
+  color: white;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  width: 100vw;
+  height: var(--category-head-height);
+  // border-top: 1px solid white;
+}
+
+.category-head h2 
+{
+  padding-left: var(--main-space);
+}
+
+.content
+{
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(220, 220, 220);
+}
+
+@media screen and (max-width: 756px)
+{
+  #section-1 #section-1-left, .light
+  {
+    display: none;
+  }
+    
+  #section-1 #section-1-right
+  {
+    width: 100vw;
+  }
 }
