--- a/_includes/about_contact.html
+++ b/_includes/about_contact.html
@@ -7,17 +7,21 @@
   </div>
 </template>
 
-<div class="overlay-field" id="about">
+<div class="overlay-field backdrop-blur" id="about">
   <p>{{ site.data.about.about }}</p> 
 </div>
 
-<div class="overlay-field" id="contact">
+<div class="overlay-field backdrop-blur" id="contact">
   <div class="contact-wrapper">
     <p>{{ site.data.general.title }}</p>
     <p>{{ site.data.general.street }} {{ site.data.general.number_of_building }} </p>
     <p>{{ site.data.general.postal_code }} {{ site.data.general.city }} </p>
     <p>{{ site.data.general.phone }}</p>
     <p>{{ site.data.general.e_mail }}</p>
+  </div>
+  <div id="imprint-wrapper">
+    <h2>Imprint</h2>
+    {{ site.data.general.imprint }}
   </div>
   
 </div>
