--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -6,7 +6,8 @@
 * 'wght' (range from 100.0 to 900.0)
 
 */
-@font-face {
+@font-face 
+{
   font-family: 'Switzer-Variable';
   src: url('/assets/fonts/Switzer-Variable.woff2') format('woff2'),
        url('/assets/fonts/Switzer-Variable.woff') format('woff'),
@@ -25,7 +26,8 @@
 * 'wght' (range from 100.0 to 900.0)
 
 */
-@font-face {
+@font-face 
+{
   font-family: 'Switzer-VariableItalic';
   src: url('/assets/fonts/Switzer-VariableItalic.woff2') format('woff2'),
        url('/assets/fonts/Switzer-VariableItalic.woff') format('woff'),
@@ -37,7 +39,8 @@
 
 // --- Typography styles here ---
 
-body {
+body 
+{
   font-family: 'Switzer-Variable', sans-serif;
   font-variation-settings: 'wght' 600.0;
   font-size: var(--font-size-main);
@@ -46,16 +49,35 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2 {
+h1, h2 
+{
   line-height: 1;
   font-variation-settings: 'wght' 900.0;
   font-size: var(--font-size-big);
 }
 
-nav {
+.sub-nav h2
+{
+  font-size: calc(var(--font-size-big) * 2.25;
+  transition: font-size .3s;
+}
+
+nav 
+{
   text-transform: uppercase;
 }
 
-a {
+a 
+{
   text-decoration: none;
+}
+
+
+.contact-wrapper p
+{
+  font-size: 5vw;
+  text-align: center;
+  /* margin: auto 0; */
+  color: white;
+  font-variation-settings: 'wght' 700;
 }
